#825 Add @WithServiceImplementation annotation in testutil to register SPI implementations in processor tests.